--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,7 @@ body {
 }
 
 * {
-  font-family: "Open Sans", sans-serif !important
+  font-family: "Open Sans", sans-serif !important;
     /* outline: 1px solid hotpink; */
 }
 
