Quore Search + Filters ( Quote Dashboard )

--- a/src/Pages/Quote/quotedashboard.css
+++ b/src/Pages/Quote/quotedashboard.css
@@ -1,13 +1,15 @@
-.hr-line{
+.hr-line {
   height: 1px;
   background-color: black;
   margin: 0px;
 }
+
 .main {
   height: 100%;
   width: 100%;
   background-color: #f1f5ff;
 }
+
 .top-section {
   display: flex;
   justify-content: space-between;
@@ -15,41 +17,49 @@
   width: 100%;
   /* overflow-x: auto; */
 }
+
 .search-bar {
   display: flex;
   align-items: center;
   gap: 20px;
 }
+
 .searchinput {
   border: none;
   background: none;
   /* border-bottom: 1px solid black; */
   outline: none;
 }
+
 .searchinput:focus-visible {
   box-shadow: none;
   outline: none;
   background: none;
 }
+
 .formlabel {
   border-bottom: 1px solid black;
   display: flex;
   align-items: center;
 }
+
 .span {
   font-size: 24px;
   color: RGB(2, 29, 73);
   font-weight: 700;
 }
+
 .searchinput::placeholder {
   color: RGB(2, 29, 73);
   font-size: 14px;
   font-weight: 400;
 }
+
 .right-section {
   display: flex;
   gap: 20px;
 }
+
 .quote-report {
   background-color: white;
   color: RGB(18, 50, 142);
@@ -58,10 +68,12 @@
   border-radius: 50px;
   padding-inline: 20px;
 }
+
 .quote-report:hover {
   background-color: RGB(18, 50, 142);
   color: white;
 }
+
 .filter-card {
   display: flex;
   gap: 10px;
@@ -71,6 +83,7 @@
   padding-block: 20px;
   padding-left: 10px;
 }
+
 .filter-card .first-card {
   background-color: white;
   display: flex;
@@ -82,12 +95,19 @@
   border-radius: 5px;
   cursor: pointer;
 }
-.first-card:hover {
+
+.first-card:hover,
+.filter-card .active {
   background-color: #f1f5ff;
   border: 1px solid RGB(2, 29, 73);
   transform: scale(1.05);
-  /* box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2); */
 }
+
+.filter-card .active {
+  color: white;
+  background-color: #021d49;
+}
+
 .firstfilter-card {
   background: none;
   display: flex;
@@ -99,6 +119,7 @@
   border-radius: 5px;
   cursor: pointer;
 }
+
 .quoteref-card {
   width: 100%;
   background-color: white;
@@ -107,10 +128,12 @@
   cursor: pointer;
   /* overflow-x: auto; */
 }
+
 .quoteref-card:hover {
   transform: scale(1);
   box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
 }
+
 .ref-top {
   display: flex;
   /* border-bottom: 1px solid black;
@@ -120,6 +143,7 @@
   padding-block: 20px;
   /* padding-block: 30px; */
 }
+
 .ref-top .top-left {
   width: 40%;
   /* border: 1px solid green; */
@@ -128,19 +152,23 @@
   align-items: center;
   padding-right: 20px;
 }
+
 .topleft-left {
   display: flex;
   align-items: center;
   gap: 20px;
 }
+
 .top-middle {
   width: 40%;
   /* border: 1px solid yellow; */
 }
+
 .top-right {
   width: 20%;
   /* border: 1px solid pink; */
 }
+
 .cancel {
   color: red;
   background-color: #fcf0ef;
@@ -151,27 +179,31 @@
   font-weight: 700;
   font-family: sans-serif;
 }
+
 .quote-ref {
   color: RGB(20, 58, 156);
   font-family: sans-serif;
   font-weight: 400;
   font-size: 11px;
 }
+
 .quote-id {
   /* color: RGB(2, 29, 73);
   font-size: 14px;
   font-weight: 700;
   font-family: sans-serif; */
   line-height: 16px;
-    color: rgb(2, 29, 73);
-    font-family: "Open Sans", sans-serif;
-    font-size: 0.875rem;
+  color: rgb(2, 29, 73);
+  font-family: "Open Sans", sans-serif;
+  font-size: 0.875rem;
 }
+
 .top-middle {
   display: flex;
   align-items: center;
   gap: 20px;
 }
+
 .top-middleleft {
   border-left: 2px solid #315cd6;
   padding-left: 20px;
@@ -180,42 +212,49 @@
   flex-direction: column;
   justify-content: space-between;
 }
+
 .china-text {
   color: #050505;
   font-family: sans-serif;
   font-size: 11px;
   font-weight: 400;
 }
+
 .cargo-quote {
   color: #143a9c;
   font-family: sans-serif;
   font-size: 11px;
   font-weight: 400;
 }
-.china-cargo{
+
+.china-cargo {
   text-transform: uppercase;
   color: rgb(5, 5, 5);
   font-family: "Open Sans", sans-serif;
   font-size: 0.688rem;
   font-weight: 400;
 }
+
 .cargo-date {
   color: #021d49;
   font-family: sans-serif;
   font-size: 11px;
   font-weight: 400;
 }
+
 .top-right {
   display: flex;
   justify-content: center;
   align-items: center;
 }
+
 .budget {
   color: RGB(5, 5, 5);
   font-size: 24px;
   font-family: sans-serif;
   font-weight: 700;
 }
+
 .ref-bootom {
   background-color: white;
   width: 100%;
@@ -226,6 +265,7 @@
   justify-content: space-between;
   border-top: 1px solid rgb(230, 233, 240);
 }
+
 .ref-bootom {
   display: flex;
   /* border-bottom: 1px solid black;
@@ -235,11 +275,13 @@
   padding-block: 20px;
   /* padding-block: 30px; */
 }
+
 .bottom-left {
   display: flex;
   gap: 20px;
   align-items: center;
 }
+
 .bottom-right {
   width: 50%;
   display: flex;
@@ -247,6 +289,7 @@
   align-items: center;
   gap: 10px;
 }
+
 .copy-request {
   border: 1px solid #315cd6;
   padding-inline: 20px;
@@ -262,9 +305,11 @@
   align-items: center;
   gap: 3px;
 }
+
 .copy-request:hover {
   color: RGB(2, 29, 73);
 }
+
 /* .dropdown-toggle{
   background: none;
   border: none;
@@ -300,45 +345,53 @@
 /* .rs-dropdown-toggle-caret {
   display: none;
 }  */
-  .custom-dropdown .rs-dropdown-toggle-caret{
-    display: none;
-  }
-  .parent .dropdown-title {
-    background: pink;
-    color: red !important;
-  }
-  .parent .dropdown-title:hover{
-    color: #021d49 !important;
-  }
+.custom-dropdown .rs-dropdown-toggle-caret {
+  display: none;
+}
 
-.rs-btn{
+.parent .dropdown-title {
+  background: pink;
+  color: red !important;
+}
+
+.parent .dropdown-title:hover {
+  color: #021d49 !important;
+}
+
+.rs-btn {
   background: transparent;
 }
-.rs-btn:hover{
+
+.rs-btn:hover {
   background: transparent;
 }
+
 @media only screen and (max-width: 1000px) {
-  .quote-report{
+  .quote-report {
     padding-block: 10px;
   }
+
   .filter-card {
     overflow-x: auto;
     -webkit-overflow-scrolling: touch;
     padding-left: 20px;
     padding-right: 20px;
   }
+
   .filter-card {
     display: flex;
-   
+
     justify-content: center;
-  
+
     gap: 5px;
     margin-block: 30px;
     overflow-x: auto;
   }
+
   .filter-card .first-card {
     width: 100%;
   }
+
   .top-section {
     overflow-x: auto;
     width: 100%;
@@ -346,52 +399,64 @@
     flex-direction: column;
     gap: 20px;
   }
+
   .span {
     font-size: 18px;
   }
+
   .search-bar {
     display: flex;
     flex-direction: column;
     justify-content: start;
     align-items: start;
   }
+
   .formlabel {
     width: 100%;
   }
+
   .quoteref-card {
     overflow-x: auto;
     width: 100%;
   }
+
   .ref-top {
     display: flex;
     flex-direction: column;
     gap: 10px;
   }
+
   .ref-top .top-left {
     width: 100%;
   }
+
   .top-middle {
     width: 100%;
   }
+
   .top-right {
     width: 100%;
   }
+
   .ref-bootom {
     display: flex;
     flex-direction: column;
     padding-right: 20px !important;
   }
+
   .bottom-left {
     display: flex;
     flex-direction: column;
     align-items: start;
   }
+
   .bottom-right {
     display: flex;
     flex-direction: column;
     width: 100%;
     justify-content: center;
   }
+
   .copy-request {
     width: 100%;
     display: flex;
@@ -401,9 +466,10 @@
 }
 
 @media only screen and (max-width: 600px) {
-.eses{
-  width: 90%;
-}
+  .eses {
+    width: 90%;
+  }
+
   .filter-card {
     overflow-x: auto;
     -webkit-overflow-scrolling: touch;
@@ -411,18 +477,21 @@
     padding-right: 20px;
     padding-inline: 0px;
   }
+
   .filter-card {
     display: flex;
-    
+
     justify-content: center;
- 
+
     gap: 5px;
     margin-block: 0px;
     overflow-x: auto;
   }
+
   .filter-card .first-card {
     width: 100%;
   }
+
   .top-section {
     overflow-x: auto;
     width: 100%;
@@ -430,33 +499,40 @@
     flex-direction: column;
     gap: 20px;
   }
-  .right-section{
+
+  .right-section {
     padding-left: 30px;
   }
+
   .span {
     font-size: 18px;
     padding-left: 30px;
   }
+
   .search-bar {
     display: flex;
     flex-direction: column;
     justify-content: start;
     align-items: start;
   }
+
   .formlabel {
     width: 80%;
     /* padding-inline: 30px; */
     margin: auto;
   }
+
   .quoteref-card {
     overflow-x: auto;
     width: 100%;
   }
+
   .ref-top {
     display: flex;
     flex-direction: column;
     gap: 10px;
   }
+
   .ref-top .top-left {
     width: 100%;
     display: flex;
@@ -465,27 +541,33 @@
     align-items: start;
     gap: 20px;
   }
+
   .top-middle {
     width: 100%;
   }
+
   .top-right {
     width: 100%;
   }
+
   .ref-bootom {
     display: flex;
     flex-direction: column;
   }
+
   .bottom-left {
     display: flex;
     flex-direction: column;
     align-items: start;
   }
+
   .bottom-right {
     display: flex;
     flex-direction: column;
     width: 100%;
     justify-content: center;
   }
+
   .copy-request {
     width: 100%;
     display: flex;
