--- a/src/Pages/Dashboard/Dashboard.css
+++ b/src/Pages/Dashboard/Dashboard.css
@@ -86,6 +86,7 @@ transition: transform 0.3s ease, box-shadow 0.3s ease;
   font-size: 10px;
   font-family: "Open Sans", sans-serif ;
   color: #021d4f;
+  margin-left: 3px;
 }
 
 @media only screen and (max-width: 1600px) {
